src/objects/ProjectSnapshot__c.object
<CustomObject>
    <fields>
        <fullName>KAMClientManager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client Account Manager</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Project Snapshots (KAM Client Manager)</relationshipLabel>
        <relationshipName>Project_Snapshots2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LaborBudgetOriginal__c</fullName>
        <label>Labor Budget Original</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LaborBudget__c</fullName>
        <label>Labor Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LaborETC__c</fullName>
        <formula>LaborForecast__c -  LaborITD__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Labor ETC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LaborForecastDelta__c</fullName>
        <formula>LaborForecast__c -  LaborForecastPrevME__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Labor Forecast Delta</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LaborForecastPrevME__c</fullName>
        <label>Labor Forecast Prev. ME</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LaborForecast__c</fullName>
        <label>Labor Forecast</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LaborITD__c</fullName>
        <label>Labor ITD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LaborMonthToDate__c</fullName>
        <label>Labor Month To Date</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LaborMultBudget__c</fullName>
        <label>Labor Mult Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LaborMultDraft__c</fullName>
        <label>Labor Mult Draft</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LaborMultForecast__c</fullName>
        <label>Labor Mult Forecast</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LaborMultITD__c</fullName>
        <label>Labor Mult ITD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LaborMultMonthToDate__c</fullName>
        <label>Labor Mult Month To Date</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LaborMultUnapproved__c</fullName>
        <label>Labor Mult Unapproved</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LaborMultYearToDate__c</fullName>
        <label>Labor Mult Year To Date</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LaborYearToDate__c</fullName>
        <label>Labor Year To Date</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LastUpdatedBudget__c</fullName>
        <label>Last Updated Budget</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LostMarginBudget__c</fullName>
        <label>Lost Margin Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LostMarginDraft__c</fullName>
        <label>Lost Margin Draft</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LostMarginETC__c</fullName>
        <description>LostMarginForecast__c -  LostMarginITD__c</description>
        <formula>LostMarginForecast__c -  LostMarginITD__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lost Margin ETC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LostMarginForecast__c</fullName>
        <label>Lost Margin Forecast</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LostMarginITD__c</fullName>
        <formula>((NMNSRITD__c - NMNSRBudget__c) * NetServiceITD__c)/100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lost Margin ITD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LostMarginMonthToDate__c</fullName>
        <formula>((NMNSRMonthToDate__c -  NMNSRBudget__c) *  NetServiceMonthToDate__c ) / 100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lost Margin Month To Date</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LostMarginUnapproved__c</fullName>
        <label>Lost Margin Unapproved</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LostMarginYearToDate__c</fullName>
        <formula>((NMNSRYearToDate__c -  NMNSRBudget__c) *  NetServiceYearToDate__c ) / 100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lost Margin Year To Date</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NMGRBudget__c</fullName>
        <label>NMGR Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>NMGRDraft__c</fullName>
        <label>NMGR Draft</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>NMGRForecast__c</fullName>
        <label>NMGR Forecast</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>NMGRITD__c</fullName>
        <label>NMGR ITD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>NMGRMonthToDate__c</fullName>
        <label>NMGR Month To Date</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>NMGRUnapproved__c</fullName>
        <label>NMGR Unapproved</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>NMGRYearToDate__c</fullName>
        <label>NMGR Year To Date</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>NMNSRBudgetOriginal__c</fullName>
        <formula>NetMarginBudgetOriginal__c/ NetServiceBudgetOriginal__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NMNSR Budget Original</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>NMNSRBudget__c</fullName>
        <label>NMNSR Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>NMNSRDraft__c</fullName>
        <label>NMNSR Draft</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>NMNSRETC__c</fullName>
        <formula>NetMarginETC__c / NetServiceETC__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NMNSR ETC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>NMNSRForecastDelta__c</fullName>
        <formula>NMNSRForecast__c -  NMNSRForecastPrevME__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NMNSR Forecast Delta</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>NMNSRForecastPrevME__c</fullName>
        <formula>NetMarginForecastPrevME__c / NetServiceForecastPrevME__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NMNSR Forecast Prev. ME</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>NMNSRForecast__c</fullName>
        <label>NMNSR Forecast</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>NMNSRITD__c</fullName>
        <label>NMNSR ITD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>NMNSRMonthToDate__c</fullName>
        <label>NMNSR Month To Date</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>NMNSRUnapproved__c</fullName>
        <label>NMNSR Unapproved</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>NMNSRYearToDate__c</fullName>
        <label>NMNSR Year To Date</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>NetMarginBudgetOriginal__c</fullName>
        <formula>GrossMarginBudgetOriginal__c -  OverheadBudgetOriginal__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Margin Budget Original</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NetMarginBudget__c</fullName>
        <label>Net Margin Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NetMarginChanges__c</fullName>
        <label>Net Margin Changes</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NetMarginCurrentBudget__c</fullName>
        <label>Net Margin Current Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NetMarginDraft__c</fullName>
        <label>Net Margin Draft</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NetMarginETC__c</fullName>
        <formula>GrossMarginETC__c  -  OverheadMonthToDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Margin ETC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NetMarginForecastDelta__c</fullName>
        <formula>NetMarginForecast__c -  NetMarginForecastPrevME__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Margin Forecast Delta</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NetMarginForecastPrevME__c</fullName>
        <formula>GrossMarginForecastPrevME__c -  OverheadForecastPrevME__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Margin Forecast Prev. ME</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NetMarginForecast__c</fullName>
        <label>Net Margin Forecast</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NetMarginITD__c</fullName>
        <label>Net Margin ITD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NetMarginMonthToDate__c</fullName>
        <label>Net Margin Month To Date</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NetMarginOrigBudget__c</fullName>
        <label>Net Margin Orig Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NetMarginUnapproved__c</fullName>
        <label>Net Margin Unapproved</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NetMarginYearToDate__c</fullName>
        <label>Net Margin Year To Date</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NetServiceBudgetOriginal__c</fullName>
        <formula>GrossRevenueBudgetOriginal__c - ( CostsODCSUBSBudgetOriginal__c +  ContingencyBudgetOriginal__c  +  CostsODCSUBSBudgetOriginal__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Service Budget Original</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NetServiceBudget__c</fullName>
        <label>Net Service Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NetServiceDraft__c</fullName>
        <label>Net Service Draft</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NetServiceETC__c</fullName>
        <formula>GrossRevenueETC__c - ( CostsODCEXPSETC__c +  CostsODCSUBSETC__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Service ETC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NetServiceForecastDelta__c</fullName>
        <formula>NetServiceForecast__c -  NetServiceForecastPrevME__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Service Forecast Delta</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NetServiceForecastPrevME__c</fullName>
        <formula>GrossRevenueForecastPrevME__c -  (CostsODCEXPSForecastPrevME__c +  ContingencyForecastPrevME__c +  LaborForecastPrevME__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Service Forecast Prev. ME</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NetServiceForecast__c</fullName>
        <label>Net Service Forecast</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NetServiceITD__c</fullName>
        <label>Net Service ITD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NetServiceMonthToDate__c</fullName>
        <label>Net Service Month To Date</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NetServiceUnapproved__c</fullName>
        <label>Net Service Unapproved</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NetServiceYearToDate__c</fullName>
        <label>Net Service Year To Date</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OperationsParticipantTitle__c</fullName>
        <label>Operations Participant (Title)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrigBudget__c</fullName>
        <label>Orig Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OriginalBudgetAsOfDate__c</fullName>
        <label>Original Budget As Of Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OtherParticipant1__c</fullName>
        <label>Other Participant 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OtherParticipant2__c</fullName>
        <label>Other Participant 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OtherParticipant3__c</fullName>
        <label>Other Participant 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OverallProjectSummary__c</fullName>
        <label>OverallProjectSummary</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>OverheadBudgetOriginal__c</fullName>
        <label>Overhead Budget Original</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OverheadBudget__c</fullName>
        <label>Overhead Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OverheadETC__c</fullName>
        <formula>OverheadForecast__c -  OverheadITD__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Overhead ETC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OverheadForecastDelta__c</fullName>
        <formula>OverheadBudgetOriginal__c -  OverheadForecastPrevME__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Overhead Forecast Delta</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OverheadForecastPrevME__c</fullName>
        <label>Overhead Forecast Prev. ME</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OverheadForecast__c</fullName>
        <label>Overhead Forecast</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OverheadITD__c</fullName>
        <label>Overhead ITD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OverheadMonthToDate__c</fullName>
        <label>Overhead Month To Date</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OverheadYearToDate__c</fullName>
        <label>Overhead Year To Date</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>POBalanceFunctionalCurrency__c</fullName>
        <label>PO Balance Functional Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>POCommitmentCurrency__c</fullName>
        <label>PO Commitment Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>POFunctionalCurrency__c</fullName>
        <label>PO Functional Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PaidAmount__c</fullName>
        <label>Paid Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Period_Namee__c</fullName>
        <formula>Time_Period__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Period Namee</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PrimaryFutureSpend__c</fullName>
        <label>PrimaryFutureSpend</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PrimaryOrganization__c</fullName>
        <label>PrimaryOrganization</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ProjectDirector__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Project_Snapshots</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProjectEndDateChangedsincePrevME__c</fullName>
        <formula>ProjectEndDate__c &lt;&gt;  ProjectEndDatePrevME__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project End Date Changed since Prev. ME</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ProjectEndDatePrevME__c</fullName>
        <label>Project End Date Prev. ME</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ProjectEndDate__c</fullName>
        <label>Project End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ProjectManager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Manager</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Project Snapshots</relationshipLabel>
        <relationshipName>Project_Snapshots</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProjectName__c</fullName>
        <label>Project Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjectNumber__c</fullName>
        <label>Project Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjectRating__c</fullName>
        <label>Project Rating</label>
        <picklist>
            <picklistValues>
                <fullName>C0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ProjectReview__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Review</label>
        <referenceTo>ProjectReview__c</referenceTo>
        <relationshipLabel>Project Snapshots</relationshipLabel>
        <relationshipName>ProjectSnapshots</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProjectStartDate__c</fullName>
        <label>Project Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ProjectTasks__c</fullName>
        <label>ProjectTasks</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>pse__Proj__c</referenceTo>
        <relationshipLabel>Project Snapshots</relationshipLabel>
        <relationshipName>ProjectSnapshots</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ReceiptsITD__c</fullName>
        <formula>ARTotal__c -  AR__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Receipts ITD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Receipts_ITD__c</fullName>
        <description>Receipts ($ - ITD)</description>
        <formula>ARTotal__c -  AR__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Receipts ($ - ITD)</inlineHelpText>
        <label>Receipts ITD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RelatedAgreements__c</fullName>
        <label>Related Agreements</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Retention__c</fullName>
        <label>Retention</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ReviewType__c</fullName>
        <label>Review Type</label>
        <picklist>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarterly</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RunRateAverageCost__c</fullName>
        <label>Run Rate Average Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SCMBudgetOriginal__c</fullName>
        <formula>NetServiceBudgetOriginal__c /( LaborBudgetOriginal__c +  FringeBudgetOriginal__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SCM Budget Original</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SCMBudget__c</fullName>
        <formula>NetServiceBudget__c /( LaborBudget__c +  FringeBudget__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SCM Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SCMETC__c</fullName>
        <formula>NetServiceETC__c / ( LaborETC__c +  FringeETC__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SCM ETC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SCMForecastDelta__c</fullName>
        <formula>SCMForecast__c -  SCMForecastPrevME__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SCM Forecast Delta</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SCMForecastPrevME__c</fullName>
        <formula>NetServiceForecastPrevME__c /  (LaborForecastPrevME__c +  FringeForecastPrevME__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SCM Forecast Prev. ME</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SCMForecast__c</fullName>
        <formula>NetServiceForecast__c /( LaborForecast__c +  FringeForecast__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SCM Forecast</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SCMITD__c</fullName>
        <formula>NetServiceITD__c /  (LaborITD__c +  FringeITD__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SCM ITD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SCMMonthToDate__c</fullName>
        <formula>NetServiceMonthToDate__c /( LaborMonthToDate__c +  FringeMonthToDate__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SCM Month To Date</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SCMYearToDate__c</fullName>
        <formula>NetServiceYearToDate__c / ( LaborYearToDate__c +  FringeYearToDate__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SCM Year To Date</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ScheduledVarianceDays__c</fullName>
        <formula>ScheduledVarianceValue__c / (CostBudget__c / ( Project__r.EstimatedEndDate__c  - ProjectStartDate__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Scheduled Variance (Days)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ScheduledVarianceValue__c</fullName>
        <formula>EarnedValue__c - EarnedValuePlannedValue__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Scheduled Variance (Value)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SecondaryFutureSpend__c</fullName>
        <label>SecondaryFutureSpend</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SecondaryOrganizations__c</fullName>
        <label>SecondaryOrganizations</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SnapshotDate__c</fullName>
        <label>Snapshot Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SnapshotFiscalMonth__c</fullName>
        <description>The name of the fiscal month corresponding to the snapshot date, following the naming convention: FY2015-01, FY2015-02, ..., FY2015-12, etc.</description>
        <inlineHelpText>The name of the fiscal month corresponding to the snapshot date, following the naming convention: FY2015-01, FY2015-02, ..., FY2015-12, etc.</inlineHelpText>
        <label>Snapshot Fiscal Month</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SnapshotPreviousFiscalMonth__c</fullName>
        <label>Snapshot Previous Fiscal Month</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SnapshotType__c</fullName>
        <label>Snapshot Type</label>
        <picklist>
            <picklistValues>
                <fullName>Manual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SupportingDepartment1Region__c</fullName>
        <label>Supporting Department Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SupportingDepartment2BusinessLine__c</fullName>
        <label>Supporting Department Business Line</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SupportingDepartment2District__c</fullName>
        <label>Supporting Department District</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SupportingDepartment2Organization__c</fullName>
        <label>Supporting Department Organization</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SupportingDepartment2PercentAllocation__c</fullName>
        <label>Supporting Department Percent Allocation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SupportingDepartmentDistrict__c</fullName>
        <label>Supporting Department District</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SupportingDepartmentOrganization__c</fullName>
        <label>Supporting Department Organization</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SupportingDepartmentPercentAllocation__c</fullName>
        <label>Supporting Department Percent Allocation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SurMarginBudget__c</fullName>
        <label>SurMarginBudget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SurMarginDraft__c</fullName>
        <label>SurMarginDraft</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SurMarginForecast__c</fullName>
        <label>SurMarginForecast</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SurMarginITD__c</fullName>
        <label>SurMarginITD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SurMarginMonthToDate__c</fullName>
        <label>SurMarginMonthToDate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SurMarginUnapproved__c</fullName>
        <label>SurMarginUnapproved</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
</CustomObject>